# GameDemo

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
assets/: assets.json  config.json
include/: constants.hpp  entities.hpp  gameRunner.hpp  properties.hpp  strategies.hpp  utils.hpp
src/: entities.cpp  fishStrategy.cpp  fishTrainer.cpp  game.cpp  gameRunner.cpp  main.cpp  resource.rc  utils.cpp
src/entities/: CircularEater.cpp  CircularEater.hpp  Fish.cpp  Fish.hpp  GreenCircle.cpp  GreenCircle.hpp  Snake.cpp  Snake.hpp
src/entities/boids/: Swarm.cpp  Swarm.hpp
src/entities/strategies/: strategies.cpp  strategies.hpp
src/game/: GameRunner.cpp  GameRunner.hpp  SceneManager.cpp  SceneManager.hpp
src/game/scenes/: LoseScene.cpp  LoseScene.hpp  RenderedGameRunner.cpp  RenderedGameRunner.hpp  StartScene.cpp  StartScene.hpp  WinScene.cpp  WinScene.hpp
src/utilities/: AssetManager.cpp  AssetManager.hpp  WinUtils.cpp  WinUtils.hpp  config.cpp  config.hpp  mathUtils.cpp  mathUtils.hpp  properties.hpp  typeUtils.hpp  utils.cpp  utils.hpp
